--- a/learning/lxc.yml
+++ b/learning/lxc.yml
@@ -2,12 +2,27 @@
 - hosts: fluxcapacitor.r00t.co.za
   remote_user: root
   tasks:
-       - name: start lxc
-         lxc_container:
-           name=Ansible_Ubuntu_16.04
-           state=started
+
+# start / stop container
+#       - name: start lxc
+#         lxc_container:
+#           name=Ansible_Ubuntu_16.04
+#           state=started
 
 # ping container (not icmp test)
-       - name: ping test
-         ping:
+#       - name: ping test
+#         ping:
 
+# clone existing container
+#        - name: clone lxc
+#          lxc_container:
+#            name: TEMPLATE_Ubuntu_16.04
+#            clone_name: ANSIBLECLONE_Ubuntu_16.04
+
+        - name: create started container
+          lxc_container:
+            name: started_ubuntu16_container
+            container_log: true
+            template: ubuntu
+            state: started
+            template_options: --release xenial
