--- a/learning/installusingyum.yml
+++ b/learning/installusingyum.yml
@@ -1,7 +1,7 @@
 # Always start anible playbook with three dashes.
 ---
 # specify remote host
-- hosts: fluxcapacitor.r00t.co.za
+- hosts: ansible-test-server
 # specify remote user (make sure your ssh key is copied onto the remote host / user)
   remote_user: root
 # modules
