changed hostname gather facts

--- a/FreeBSD/roles/rc/template/etc/rc.conf
+++ b/FreeBSD/roles/rc/template/etc/rc.conf
@@ -1,4 +1,4 @@
-hostname="{{ inventory_hostname }}"
+hostname="{{ ansible_fqdn }}"
 ifconfig_{{ ansible_default_ipv4.interface }}="{{ ansible_default_ipv4.address }} netmask {{ ansible_default_ipv4.netmask }}"
 defaultrouter="{{ ansible_default_ipv4.gateway }}"
 
@@ -30,4 +30,5 @@ vmware_guestd_enable="YES"
 # Nagios client
 nrpe2_enable="YES"
 
-
+# OSSEC client
+ossechids_enable="YES"
